Archive/fa6c05138ad4832949df0308fff85851-ce6b7b81d29c30e32c78aebe6e642254/output
+ clang++ -std=c++11 -O2 -pthread main.cpp
main.cpp:9:8: error: no matching constructor for initialization of 'Foo'
   Foo o{1, 2};
       ^~~~~~~
main.cpp:4:10: note: candidate constructor (the implicit default constructor) not viable: requires 0 arguments, but 2 were provided
   class Foo
         ^
main.cpp:4:10: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 2 were provided
main.cpp:4:10: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 2 were provided
1 error generated.
